--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "express": "^4.21.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.10.0",
     "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-vue": "^9.28.0",
+    "globals": "^15.9.0",
     "prettier": "^3.3.3"
   }
 }
